Reports für Klassen- und Kurs-Fotoliste ergänzt
Co-authored-by: Michael <git@pluemper.name>